[gd_scene load_steps=28 format=3 uid="uid://b0a6ch7y3umcj"]

[ext_resource type="Script" uid="uid://cjd6s35brnfyc" path="res://scenes/main_menu/scripts/main_menu.gd" id="1_5seab"]
[ext_resource type="Texture2D" uid="uid://bmbtuxpculhwv" path="res://textures/ui/main_menu3.png" id="1_x2yjq"]
[ext_resource type="Script" uid="uid://sbo45gobftet" path="res://scenes/main_menu/scripts/main_menu_camera.gd" id="2_4xg86"]
[ext_resource type="Texture2D" uid="uid://b77vw4r7h8gp5" path="res://textures/ui/Button2.png" id="3_rrgl4"]
[ext_resource type="Shader" uid="uid://ca8tkxbmpyc21" path="res://shaders/edge_detection.gdshader" id="3_thkx5"]
[ext_resource type="Texture2D" uid="uid://df3852wwkdble" path="res://textures/ui/Button.png" id="3_x2yjq"]
[ext_resource type="Texture2D" uid="uid://bspufxilq7h0d" path="res://textures/ui/Button2_pressed.png" id="4_dn3lk"]
[ext_resource type="Texture2D" uid="uid://dio5dc6p87rq0" path="res://textures/ui/Button_pressed.png" id="4_lqpn7"]
[ext_resource type="Texture2D" uid="uid://kcyag62qbr4" path="res://textures/checkerboard.png" id="4_x2yjq"]
[ext_resource type="Shader" uid="uid://d0acs2f3wrni6" path="res://shaders/sky.gdshader" id="5_lqpn7"]
[ext_resource type="PackedScene" uid="uid://br6fw3sedv0yn" path="res://scenes/balls/ball.tscn" id="6_qel0l"]
[ext_resource type="Texture2D" uid="uid://dwk3egkgbtwmf" path="res://textures/ui/Button2_quit.png" id="7_dn3lk"]
[ext_resource type="Script" uid="uid://joi35n2utr5w" path="res://scenes/main_menu/scripts/main_menu_ball.gd" id="7_rrgl4"]
[ext_resource type="Texture2D" uid="uid://dqkftrx7p0k6b" path="res://textures/ui/Button2_quit_pressed.png" id="8_4ujhu"]

[sub_resource type="Theme" id="Theme_5dd4i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4xg86"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_jk1qb"]

[sub_resource type="Theme" id="Theme_qel0l"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jsk3o"]
render_priority = -1
shader = ExtResource("3_thkx5")
shader_parameter/lineHighlight = 0.2
shader_parameter/lineShadow = 0.7

[sub_resource type="QuadMesh" id="QuadMesh_4arys"]
lightmap_size_hint = Vector2i(12, 12)
material = SubResource("ShaderMaterial_jsk3o")
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_b2yaj"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b2yaj"]
albedo_color = Color(0.54901963, 0.6117647, 0.8, 1)
albedo_texture = ExtResource("4_x2yjq")
albedo_texture_force_srgb = true
uv1_scale = Vector3(11, 16, 33)
texture_filter = 0

[sub_resource type="PlaneMesh" id="PlaneMesh_a202f"]
material = SubResource("StandardMaterial3D_b2yaj")
size = Vector2(22, 32)

[sub_resource type="BoxShape3D" id="BoxShape3D_noarx"]
size = Vector3(21.54, 0.36, 31.36)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_aj7ea"]
shader = ExtResource("5_lqpn7")
shader_parameter/skyColor = Color(1, 1, 1, 1)
shader_parameter/horizonColor = Color(0.17737836, 0.16961, 0.72409153, 1)

[sub_resource type="Sky" id="Sky_jka67"]
sky_material = SubResource("ShaderMaterial_aj7ea")

[sub_resource type="Environment" id="Environment_jka67"]
background_mode = 2
background_energy_multiplier = 1.34
sky = SubResource("Sky_jka67")
ambient_light_source = 3

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_5dd4i")

[node name="TextureRect" type="TextureRect" parent="."]
top_level = true
z_index = 1
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_x2yjq")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
z_index = 1
layout_direction = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
z_index = 35
custom_minimum_size = Vector2(448.67, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4xg86")
script = ExtResource("1_5seab")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = SubResource("Theme_jk1qb")

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/PanelContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 0.45, 0.45, 1)
layout_mode = 2

[node name="PlayButtonTextured" type="TextureButton" parent="HBoxContainer/PanelContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
size_flags_stretch_ratio = 0.81
texture_normal = ExtResource("3_rrgl4")
texture_pressed = ExtResource("4_dn3lk")

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/PanelContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="OptionsButtonTextured" type="TextureButton" parent="HBoxContainer/PanelContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
size_flags_stretch_ratio = 0.45
texture_normal = ExtResource("3_rrgl4")
texture_pressed = ExtResource("4_dn3lk")

[node name="HSeparator3" type="HSeparator" parent="HBoxContainer/PanelContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="HBoxContainer/PanelContainer/VBoxContainer"]
visible = false
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_x2yjq")
texture_pressed = ExtResource("4_lqpn7")

[node name="QuitButtonTextured" type="TextureButton" parent="HBoxContainer/PanelContainer/VBoxContainer"]
texture_filter = 1
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 10
texture_normal = ExtResource("7_dn3lk")
texture_pressed = ExtResource("8_4ujhu")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="HBoxContainer/PanelContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(1.015, 0)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="Label" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Nie ballatro"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="HBoxContainer/PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme = SubResource("Theme_qel0l")
text = "Play"

[node name="OptionsButton" type="Button" parent="HBoxContainer/PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Options
"

[node name="QuitButton" type="Button" parent="HBoxContainer/PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Quit
"

[node name="SubViewportContainer" type="SubViewportContainer" parent="HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
stretch = true
stretch_shrink = 2

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(384, 360)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="HBoxContainer/SubViewportContainer/SubViewport"]
transform = Transform3D(0.8496837, -0.32316923, 0.41665247, -0.029516201, 0.7597836, 0.64950573, -0.52646595, -0.5641724, 0.63603705, 2.9905348, 3.8118358, 1.4249115)
fov = 55.4
script = ExtResource("2_4xg86")

[node name="EdgeDetectionShader" type="MeshInstance3D" parent="HBoxContainer/SubViewportContainer/SubViewport/Camera3D"]
extra_cull_margin = 16384.0
mesh = SubResource("QuadMesh_4arys")

[node name="Table" type="Node" parent="HBoxContainer/SubViewportContainer/SubViewport"]

[node name="Base" type="StaticBody3D" parent="HBoxContainer/SubViewportContainer/SubViewport/Table"]
transform = Transform3D(0.9999999, 0, 0, 0, 0.9999998, 0, 0, 0, 0.99999994, 0, 0, 0)
physics_material_override = SubResource("PhysicsMaterial_b2yaj")

[node name="MeshInstance3D" type="MeshInstance3D" parent="HBoxContainer/SubViewportContainer/SubViewport/Table/Base"]
transform = Transform3D(0.99986196, 0.016614765, 0, -0.016614765, 0.99986196, 0, 0, 0, 1, -0.070275314, 0.0657096, 0.016898632)
mesh = SubResource("PlaneMesh_a202f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HBoxContainer/SubViewportContainer/SubViewport/Table/Base"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.10431814, 0)
shape = SubResource("BoxShape3D_noarx")

[node name="WorldEnvironment" type="WorldEnvironment" parent="HBoxContainer/SubViewportContainer/SubViewport"]
environment = SubResource("Environment_jka67")

[node name="Balls" type="Node" parent="HBoxContainer/SubViewportContainer/SubViewport"]

[node name="Ball1" parent="HBoxContainer/SubViewportContainer/SubViewport/Balls" instance=ExtResource("6_qel0l")]
transform = Transform3D(-0.7070943, -0.21776049, -0.67275405, 4.6499824e-08, 0.9514011, -0.30795446, 0.7071192, -0.21775289, -0.6727303, 0, 0.48252046, -0.66541624)
script = ExtResource("7_rrgl4")

[node name="Ball2" parent="HBoxContainer/SubViewportContainer/SubViewport/Balls" instance=ExtResource("6_qel0l")]
transform = Transform3D(-1, 0, -3.8941437e-07, 0, 1, 0, 3.8941437e-07, 0, -1, -0.4792326, 0.483, -1.488207)
script = null

[node name="Ball3" parent="HBoxContainer/SubViewportContainer/SubViewport/Balls" instance=ExtResource("6_qel0l")]
transform = Transform3D(-1, 0, -6.2783295e-07, 0, 1, 0, 6.2783295e-07, 0, -1, 0.55276734, 0.483, -1.4892074)
script = null

[node name="Ball4" parent="HBoxContainer/SubViewportContainer/SubViewport/Balls" instance=ExtResource("6_qel0l")]
transform = Transform3D(-1, 0, -1.509958e-07, 0, 1, 0, 1.509958e-07, 0, -1, 0, 0.48252046, -2.365305)
script = null

[node name="Ball5" parent="HBoxContainer/SubViewportContainer/SubViewport/Balls" instance=ExtResource("6_qel0l")]
transform = Transform3D(-1, 0, -1.509958e-07, 0, 1, 0, 1.509958e-07, 0, -1, 1, 0.48252046, -2.365305)
script = null

[node name="Ball6" parent="HBoxContainer/SubViewportContainer/SubViewport/Balls" instance=ExtResource("6_qel0l")]
transform = Transform3D(-1, 0, -1.509958e-07, 0, 1, 0, 1.509958e-07, 0, -1, -1, 0.48252046, -2.365305)
script = null

[node name="Ball7" parent="HBoxContainer/SubViewportContainer/SubViewport/Balls" instance=ExtResource("6_qel0l")]
transform = Transform3D(-1, 0, -3.8941437e-07, 0, 1, 0, 3.8941437e-07, 0, -1, 0.5207674, 0.483, -3.1779747)
script = null

[node name="Ball8" parent="HBoxContainer/SubViewportContainer/SubViewport/Balls" instance=ExtResource("6_qel0l")]
transform = Transform3D(-1, 0, -6.2783295e-07, 0, 1, 0, 6.2783295e-07, 0, -1, 1.5527673, 0.483, -3.178975)
script = null

[node name="Ball9" parent="HBoxContainer/SubViewportContainer/SubViewport/Balls" instance=ExtResource("6_qel0l")]
transform = Transform3D(-1, 0, -3.8941437e-07, 0, 1, 0, 3.8941437e-07, 0, -1, -1.4792325, 0.483, -3.1779747)
script = null

[node name="Ball10" parent="HBoxContainer/SubViewportContainer/SubViewport/Balls" instance=ExtResource("6_qel0l")]
transform = Transform3D(-1, 0, -6.2783295e-07, 0, 1, 0, 6.2783295e-07, 0, -1, -0.44723272, 0.483, -3.178975)
script = null

[node name="Ball11" parent="HBoxContainer/SubViewportContainer/SubViewport/Balls" instance=ExtResource("6_qel0l")]
transform = Transform3D(-1, 0, -1.509958e-07, 0, 1, 0, 1.509958e-07, 0, -1, 0, 0.48252046, -4)
script = null

[node name="Ball12" parent="HBoxContainer/SubViewportContainer/SubViewport/Balls" instance=ExtResource("6_qel0l")]
transform = Transform3D(-1, 0, -1.509958e-07, 0, 1, 0, 1.509958e-07, 0, -1, 1, 0.48252046, -4)
script = null

[node name="Ball13" parent="HBoxContainer/SubViewportContainer/SubViewport/Balls" instance=ExtResource("6_qel0l")]
transform = Transform3D(-1, 0, -1.509958e-07, 0, 1, 0, 1.509958e-07, 0, -1, -1, 0.48252046, -4)
script = null

[node name="Ball14" parent="HBoxContainer/SubViewportContainer/SubViewport/Balls" instance=ExtResource("6_qel0l")]
transform = Transform3D(-1, 0, -1.509958e-07, 0, 1, 0, 1.509958e-07, 0, -1, 2, 0.48252046, -4)
script = null

[node name="Ball15" parent="HBoxContainer/SubViewportContainer/SubViewport/Balls" instance=ExtResource("6_qel0l")]
transform = Transform3D(-1, 0, -1.509958e-07, 0, 1, 0, 1.509958e-07, 0, -1, -2, 0.48252046, -4)
script = null

[connection signal="pressed" from="HBoxContainer/PanelContainer/VBoxContainer/PlayButtonTextured" to="HBoxContainer/PanelContainer" method="_on_play_button_pressed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/VBoxContainer/OptionsButtonTextured" to="HBoxContainer/PanelContainer" method="_on_options_button_pressed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/VBoxContainer/QuitButtonTextured" to="HBoxContainer/PanelContainer" method="_on_quit_button_pressed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/VBoxContainer/PlayButton" to="HBoxContainer/PanelContainer" method="_on_play_button_pressed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/VBoxContainer/OptionsButton" to="HBoxContainer/PanelContainer" method="_on_options_button_pressed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/VBoxContainer/QuitButton" to="HBoxContainer/PanelContainer" method="_on_quit_button_pressed"]
